--- a/public/index.html
+++ b/public/index.html
@@ -552,7 +552,7 @@
             <div class="nav-links">
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#how-to-play" class="nav-link">How to Play</a>
-                <a href="index.html" class="nav-link">Play Now</a>
+                <a href="/game" class="nav-link">Play Now</a>
             </div>
         </div>
     </nav>
@@ -583,14 +583,10 @@
                             <span class="stat-number">4.7★</span>
                             <span class="stat-label">Player Rating</span>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">< 120s</span>
-                            <span class="stat-label">Match Time</span>
-                        </div>
                     </div>
                     
                     <div class="cta-buttons">
-                        <a href="game.html" class="btn-primary">
+                        <a href="/game" class="btn-primary">
                             🏏 Start Playing
                         </a>
                         <a href="#features" class="btn-secondary">
@@ -673,7 +669,7 @@
                 Join thousands of players already enjoying the most strategic 
                 hand cricket experience ever created.
             </p>
-            <a href="index.html" class="cta-button">
+            <a href="/game" class="cta-button">
                 🏏 Start Your First Match
             </a>
         </div>
